# metaframe-js

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  docker-compose.yml  justfile
.claude/: settings.local.json
.github/workflows/: deploy.yml  publish-python.yml  test.yml
client/: justfile  package-lock.json  package.json
docs/: index.html  index.md  intro.md  justfile  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/ai/: guide.md  setup.md
docs/assets/: index.01dfb758.js  index.01dfb758.js.map  index.43e723b3.js  index.43e723b3.js.map  index.5e2b55e0.js  index.5e2b55e0.js.map  index.898bb923.js  index.898bb923.js.map  index.90a40942.js  index.90a40942.js.map  index.aab7bc4d.js  index.aab7bc4d.js.map  index.b68eaebe.js  index.b68eaebe.js.map  index.c0032e67.js  index.c0032e67.js.map  index.cd0f6e64.js  index.cd0f6e64.js.map  index.d7325c28.js  index.d7325c28.js.map  index.e139877e.js  index.e139877e.js.map  index.e48d042c.js  index.e48d042c.js.map  index.fc468b5f.js  index.fc468b5f.js.map
docs/development/: architecture.md  deployment.md  editor.md  local-setup.md  worker.md
docs/examples/: bouncing-ball.md  cytoscape.md  data-dashboard.md  globe.md  index.md  multi-demo.md  nglviewer.md  plot-data.md  scientific-visualization.md
docs/guide/: ai.md  embedding.md  examples.md  getting-started.md  javascript-api.md  overview.md  quickstart.md  rendering.md  short-urls.md  url-state.md
docs/integrations/: jupyter.md  jupyterlite.md  marimo.md
docs/public/: network.graphml  sales-data.csv
docs/story/: about.md  llms.md  open-infrastructure.md  what-problem-is-this-solving.md  why.md
editor/: Dockerfile  README-developer.md  README.md  index.html  justfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
editor/.claude/: settings.local.json
editor/public/: README.md  manifest.webmanifest  metaframe.json
editor/src/: App.tsx  app-debug.css  app.css  index.tsx  store.ts  sw.ts
examples/: justfile
examples/jupyter/: .gitignore  DEVELOPER.md  Dockerfile  docker-compose.yml  pyproject.toml
examples/jupyter/examples/: 12AF.cif  data.csv  demo.ipynb  file_input.ipynb  protein_visualization.ipynb
examples/jupyter/examples/.ipynb_checkpoints/: protein_visualization-checkpoint.ipynb
examples/jupyter/src/metaframe_widget/: __init__.py  _esm.py  _widget.py
examples/jupyter/tests/: conftest.py  test_browser.py  test_widget.py
examples/jupyterlite/: .gitignore  README.md  (+2 more)
examples/marimo/: DEVELOPER.md  Dockerfile  demo.py  docker-compose.yml  pyproject.toml
examples/marimo/tests/: conftest.py  test_browser.py  test_widget.py
ingress/: justfile
python/: README.md  pyproject.toml
python/src/metaframe_widget/: _esm.py  _widget.py
python/tests/: test_widget.py
scripts/: build-skill-artifacts.mjs  validate-skill.mjs
server/: config.ts  server.ts
test/: package-lock.json  package.json  playwright.config.ts  vitest.config.ts
worker/: Dockerfile  cache-test-utils.js  deno.json  index.html  justfile  server.ts  sw.js
(+83 files in other folders)
