[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metaframe-widget"
version = "0.3.3"
description = "anywidget for embedding metaframe URLs in Jupyter and marimo notebooks"
license = "MIT"
requires-python = ">=3.8"
readme = "README.md"
dependencies = [
    "anywidget>=0.9.0",
    "traitlets>=5.0.0",
]
classifiers = [
    "Framework :: Jupyter",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/metapages/metaframe-js"
Repository = "https://github.com/metapages/metaframe-js"
Issues = "https://github.com/metapages/metaframe-js/issues"

[project.optional-dependencies]
jupyter = ["jupyterlab"]
marimo = ["marimo"]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/metaframe_widget"]
