[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metaframe-widget"
version = "0.1.0"
description = "Jupyter widget for metaframe iframes"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "anywidget>=0.9.0",
    "traitlets>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyterlab",
]

[tool.hatch.build.targets.wheel]
packages = ["src/metaframe_widget"]
