[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metaframe-widget-jupyter-examples"
version = "0.0.0"
description = "Jupyter integration tests and examples for metaframe-widget"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "metaframe-widget",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyterlab",
    "nbmake",
    "playwright==1.58.0",
    "pytest-playwright",
    "requests",
]

[tool.pytest.ini_options]
markers = [
    "integration: requires a running JupyterLab server",
    "network: requires external network access (CDN, framejs.io)",
]
