[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metaframe-widget-marimo-examples"
version = "0.0.0"
description = "marimo integration tests and examples for metaframe-widget"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "metaframe-widget",
]

[project.optional-dependencies]
dev = [
    "marimo",
    "pytest",
    "playwright==1.58.0",
    "pytest-playwright",
    "requests",
]

[tool.pytest.ini_options]
markers = [
    "integration: requires a running marimo server",
    "network: requires external network access (CDN, js.mtfm.io)",
]
